--- a/src/Abp.AspNetCore.Blazor.Theme.Bootstrap.Server/Abp.AspNetCore.Blazor.Theme.Bootstrap.Server.csproj
+++ b/src/Abp.AspNetCore.Blazor.Theme.Bootstrap.Server/Abp.AspNetCore.Blazor.Theme.Bootstrap.Server.csproj
@@ -13,6 +13,10 @@
 	  <ProjectReference Include="..\Abp.AspNetCore.Blazor.Theme.Server\Abp.AspNetCore.Blazor.Theme.Server.csproj" />
 
 	</ItemGroup>
+ 
+	<ItemGroup>
+	  <Folder Include="Components\" />
+	</ItemGroup>
 
 
  
