--- a/demo/host/DemoApp.Blazor.Host/DemoApp.Blazor.Host.csproj
+++ b/demo/host/DemoApp.Blazor.Host/DemoApp.Blazor.Host.csproj
@@ -1,34 +1,36 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <Import Project="..\..\common.props" />
+	<Import Project="..\..\common.props" />
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.1" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.*" />
-  </ItemGroup>
+	<ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.BasicTheme" Version="4.4.4" />
-  </ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.*" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Identity.Blazor.WebAssembly" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.WebAssembly" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.WebAssembly" Version="4.4.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="4.4.4" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DemoApp.Host.Shared\DemoApp.Host.Shared.csproj" />
-    <ProjectReference Include="..\..\src\DemoApp.Blazor.WebAssembly\DemoApp.Blazor.WebAssembly.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="4.4.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\DemoApp.Host.Shared\DemoApp.Host.Shared.csproj" />
+		<ProjectReference Include="..\..\src\DemoApp.Blazor.WebAssembly\DemoApp.Blazor.WebAssembly.csproj" />
+	</ItemGroup>
 
 </Project>
