--- a/demo/src/DemoApp.Blazor/DemoApp.Blazor.csproj
+++ b/demo/src/DemoApp.Blazor/DemoApp.Blazor.csproj
@@ -8,10 +8,10 @@
 
     <ItemGroup>
         <PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.Web.Theming" Version="4.4.4" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\src\Abp.AspNetCore.Blazor.Theme.Bootstrap\Abp.AspNetCore.Blazor.Theme.Bootstrap.csproj" />
         <ProjectReference Include="..\DemoApp.Application.Contracts\DemoApp.Application.Contracts.csproj" />
     </ItemGroup>
 </Project>
