feat(完善demo):完善demo，server host,添加server components

--- a/demo/host/DemoApp.Blazor.Server.Host/appsettings.json
+++ b/demo/host/DemoApp.Blazor.Server.Host/appsettings.json
@@ -2,11 +2,14 @@
   "App": {
     "SelfUrl": "https://localhost:44313"
   },
-  "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=DemoApp_Unified;Trusted_Connection=True"
-  },
   "AuthServer": {
-    "Authority": "https://localhost:44313",
+    "Authority": "https://localhost:44364",
+    "ClientId": "DemoApp_Blazor_Server",
+    "ClientSecret": "1q2w3e*",
     "RequireHttpsMetadata": "false"
+  },  "RemoteServices": {
+  "Default": {
+    "BaseUrl": "https://localhost:44396/"
   }
+}
 }
