--- a/demo/host/DemoApp.IdentityServer/appsettings.json
+++ b/demo/host/DemoApp.IdentityServer/appsettings.json
@@ -25,6 +25,11 @@
         "ClientId": "DemoApp_Blazor",
         "RootUrl": "https://localhost:44307/"
       },
+      "DemoApp_Blazor_Server": {
+        "ClientId": "DemoApp_Blazor_Server",
+        "ClientSecret": "1q2w3e*",
+        "RootUrl": "https://localhost:44313/"
+      },
       "DemoApp_App": {
         "ClientId": "DemoApp_App",
         "ClientSecret": "1q2w3e*",
