--- a/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
+++ b/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
@@ -13,41 +13,29 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Blazorise.Bootstrap" Version="0.9.4.1" />
-        <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.4.1" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\DemoApp.Application\DemoApp.Application.csproj" />
-        <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.Autofac" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.BasicTheme" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.Account.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.Identity.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.4" />
+<!--        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.4" />-->
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Mvc.Client" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OAuth" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="4.4.4" />
+  
+        
         <ProjectReference Include="..\..\src\DemoApp.Blazor.Server\DemoApp.Blazor.Server.csproj" />
-        <ProjectReference Include="..\..\src\DemoApp.EntityFrameworkCore\DemoApp.EntityFrameworkCore.csproj" />
-        <ProjectReference Include="..\..\src\DemoApp.HttpApi\DemoApp.HttpApi.csproj" />
+        <ProjectReference Include="..\..\src\DemoApp.HttpApi.Client\DemoApp.HttpApi.Client.csproj" />
         <ProjectReference Include="..\DemoApp.Host.Shared\DemoApp.Host.Shared.csproj" />
     </ItemGroup>
 
