chore(company):修改公司配置

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <PackageOutputPath>$(MSBuildThisFileDirectory)bin\$(Configuration)</PackageOutputPath>
     <Authors>tchivs</Authors>
-    <Company>yinghuakeji</Company>
+    <Company>tchivs</Company>
     <LangVersion>latest</LangVersion>
 	<AbpVersion>4.4.4</AbpVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
