--- a/.github/workflows/push tag and pack nuget.yml
+++ b/.github/workflows/push tag and pack nuget.yml
@@ -12,7 +12,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        include-prerelease: true
     - name: Install dotnet tool
       run: dotnet tool install -g dotnetCampus.TagToVersion
 
@@ -26,7 +30,6 @@ jobs:
       uses: nuget/setup-nuget@v1
       with:        
         nuget-version: '5.x'
-
     - name: Add private GitHub registry to NuGet
       run: |
         nuget sources add -name github -Source https://nuget.pkg.github.com/ORGANIZATION_NAME/index.json -Username ORGANIZATION_NAME -Password ${{ secrets.GITHUB_TOKEN }}
