chore(github action):add dotnet-version 6.0

--- a/.github/workflows/PublishNuget.yml
+++ b/.github/workflows/PublishNuget.yml
@@ -16,6 +16,9 @@ jobs:
     - name: Build with dotnet
       run: |
         dotnet build --configuration Release
+      with:        
+        dotnet-version: '6.0.x'
+        include-prerelease: true
     - name: Install Nuget
       run: |
         $sourceNugetExe = "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
