--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -11,3 +11,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build with dotnet
       run: dotnet build --configuration Release
+      with:
+        dotnet-version: '6.0'
