--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,7 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
       with:
         dotnet-version: '6.0'
+        include-prerelease: true
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
+     
