--- a/.github/workflows/PublishNuget.yml
+++ b/.github/workflows/PublishNuget.yml
@@ -12,13 +12,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
- 
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0.x'
+        include-prerelease: true
     - name: Build with dotnet
       run: |
         dotnet build --configuration Release
-      with:        
-        dotnet-version: '6.0.x'
-        include-prerelease: true
     - name: Install Nuget
       run: |
         $sourceNugetExe = "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
