--- a/.github/workflows/PublishNuget.yml
+++ b/.github/workflows/PublishNuget.yml
@@ -25,10 +25,10 @@ jobs:
         $sourceNugetExe = "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
         $targetNugetExe = "nuget.exe"
         Invoke-WebRequest $sourceNugetExe -OutFile $targetNugetExe
-    - name: Add private GitHub registry to NuGet
+    - name: Add And Push generated package to GitHub registry
       run: |
         .\nuget sources add -name github -Source https://nuget.pkg.github.com/ORGANIZATION_NAME/index.json -Username ORGANIZATION_NAME -Password ${{ secrets.GITHUB_TOKEN }}
-    - name: Push generated package to GitHub registry
-      run: |
         .\nuget push .\bin\release\*.nupkg -Source github -SkipDuplicate
+    - name: Push package to Nuget registry
+      run: |
         .\nuget push .\bin\release\*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbols 
