--- a/common.props
+++ b/common.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <NoWarn>$(NoWarn);CS1591</NoWarn>
+	<AssemblyName>Tchivs.$(MSBuildProjectName)</AssemblyName>
   </PropertyGroup>
 
   <Target Name="NoWarnOnRazorViewImportedTypeConflicts" BeforeTargets="RazorCoreCompile">
