feat(add depend):server mode add Volo.Abp.AutoMapper

--- a/src/Abp.AspNetCore.Blazor.Theme.Server/Abp.AspNetCore.Blazor.Theme.Server.csproj
+++ b/src/Abp.AspNetCore.Blazor.Theme.Server/Abp.AspNetCore.Blazor.Theme.Server.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Volo.Abp.AspNetCore.Components.Server" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Bundling" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Packages" Version="$(AbpVersion)" />
 	</ItemGroup>
