fix(blazor server):API配置修复

--- a/demo/host/DemoApp.Blazor.Server.Host/appsettings.json
+++ b/demo/host/DemoApp.Blazor.Server.Host/appsettings.json
@@ -7,9 +7,13 @@
     "ClientId": "DemoApp_Blazor_Server",
     "ClientSecret": "1q2w3e*",
     "RequireHttpsMetadata": "false"
-  },  "RemoteServices": {
-  "Default": {
-    "BaseUrl": "https://localhost:44396/"
+  },
+  "RemoteServices": {
+    "Default": {
+      "BaseUrl": "https://localhost:44364/"
+    },
+    "DemoApp": {
+      "BaseUrl": "https://localhost:44396/"
+    }
   }
-}
 }
