--- a/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
+++ b/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\modules\tenant-management\Tchivs.Abp.TenantManagement.Bootstrap.Blazor.Server\Tchivs.Abp.TenantManagement.Bootstrap.Blazor.Server.csproj" />
         <ProjectReference Include="..\..\src\DemoApp.Application\DemoApp.Application.csproj" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.Autofac" Version="4.4.4" />
@@ -26,14 +27,11 @@
 <!--        <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.4" />-->
         <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OpenIdConnect" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.Client" Version="4.4.4" />
-        <PackageReference Include="Volo.Abp.AspNetCore.Authentication.OAuth" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.Http.Client.IdentityModel.Web" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="4.4.4" />
         <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="4.4.4" />
-  
-        
         <ProjectReference Include="..\..\src\DemoApp.Blazor.Server\DemoApp.Blazor.Server.csproj" />
         <ProjectReference Include="..\..\src\DemoApp.HttpApi.Client\DemoApp.HttpApi.Client.csproj" />
         <ProjectReference Include="..\DemoApp.Host.Shared\DemoApp.Host.Shared.csproj" />
