close #1 添加资源项目并引用，删除多余语言

--- a/demo/src/DemoApp.Domain.Shared/DemoApp.Domain.Shared.csproj
+++ b/demo/src/DemoApp.Domain.Shared/DemoApp.Domain.Shared.csproj
@@ -21,4 +21,8 @@
     <Content Remove="Localization\DemoApp\*.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Tchivs.Abp.Shared\Tchivs.Abp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
