--- a/src/Tchivs.Abp.AspNetCore.Blazor.Theme/Tchivs.Abp.AspNetCore.Blazor.Theme.csproj
+++ b/src/Tchivs.Abp.AspNetCore.Blazor.Theme/Tchivs.Abp.AspNetCore.Blazor.Theme.csproj
@@ -5,7 +5,6 @@
 		<IsPackable>true</IsPackable>
 		<OutputType>Library</OutputType>
 		<Nullable>enable</Nullable>
-		<RootNamespace>Tchivs.Abp.AspNetCore.Blazor.Theme</RootNamespace>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
@@ -13,14 +12,11 @@
 		<PackageReference Include="Volo.Abp.AspNetCore.Components.Web" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.Authorization" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.UI.Navigation" Version="$(AbpVersion)" />
-		<PackageReference Include="Volo.Abp.Validation" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.AutoMapper" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.Ddd.Application.Contracts" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.Validation" Version="$(AbpVersion)" />
 	</ItemGroup>
-
 	<ItemGroup>
-		<EmbeddedResource Include="Localization\BlazorUI\*.json" />
-		<Content Remove="Localization\BlazorUI\*.json" />
+	  <ProjectReference Include="..\Tchivs.Abp.Shared\Tchivs.Abp.Shared.csproj" />
 	</ItemGroup>
 </Project>
