--- a/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
+++ b/demo/host/DemoApp.Blazor.Server.Host/DemoApp.Blazor.Server.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <Import Project="..\..\common.props" />
 
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\modules\identity\Tchivs.Abp.Identity.Bootstrap.Blazor.Server\Tchivs.Abp.Identity.Bootstrap.Blazor.Server.csproj" />
         <ProjectReference Include="..\..\..\modules\tenant-management\Tchivs.Abp.TenantManagement.Bootstrap.Blazor.Server\Tchivs.Abp.TenantManagement.Bootstrap.Blazor.Server.csproj" />
         <ProjectReference Include="..\..\src\DemoApp.Application\DemoApp.Application.csproj" />
         <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.4" />
