--- a/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor.WebAssembly/Tchivs.Abp.Identity.Bootstrap.Blazor.WebAssembly.csproj
+++ b/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor.WebAssembly/Tchivs.Abp.Identity.Bootstrap.Blazor.WebAssembly.csproj
@@ -8,12 +8,13 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\src\Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap.WebAssembly\Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap.WebAssembly.csproj" />
-		<ProjectReference Include="..\Tchivs.Abp.FeatureManagement.Bootstrap.Blazor\Tchivs.Abp.FeatureManagement.Bootstrap.Blazor.csproj" />
+		<ProjectReference Include="..\Tchivs.Abp.Identity.Bootstrap.Blazor\Tchivs.Abp.Identity.Bootstrap.Blazor.csproj" />
 	</ItemGroup>
 
 </Project>
