update package with .net6 and ABP 5.1.3 version

--- a/demo/src/DemoApp.Blazor.Server/DemoApp.Blazor.Server.csproj
+++ b/demo/src/DemoApp.Blazor.Server/DemoApp.Blazor.Server.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
    
