--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,11 +1,12 @@
 <Project>
   <Import Project="build\Version.props" />
   <PropertyGroup>
+	<TargetFramework>net6.0</TargetFramework>
     <PackageOutputPath>$(MSBuildThisFileDirectory)bin\$(Configuration)</PackageOutputPath>
     <Authors>tchivs</Authors>
     <Company>tchivs</Company>
     <LangVersion>latest</LangVersion>
-	<AbpVersion>4.4.4</AbpVersion>
+	<AbpVersion>5.1.3</AbpVersion>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright (c) 2020 tchivs</Copyright>
     <PackageProjectUrl>https://github.com/tchivs/Abp.AspNetCore.Blazor.Theme</PackageProjectUrl>
