--- a/demo/host/DemoApp.Blazor.Host/DemoApp.Blazor.Host.csproj
+++ b/demo/host/DemoApp.Blazor.Host/DemoApp.Blazor.Host.csproj
@@ -3,29 +3,29 @@
 	<Import Project="..\..\common.props" />
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 	</PropertyGroup>
 
 	<ItemGroup>
 
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.Autofac.WebAssembly" Version="5.1.3" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="4.4.4" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="4.4.4" />
+		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi.Client" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.Identity.HttpApi.Client" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.TenantManagement.HttpApi.Client" Version="5.1.3" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi.Client" Version="5.1.3" />
 	</ItemGroup>
 
 	<ItemGroup>
