--- a/demo/host/DemoApp.IdentityServer/DemoApp.IdentityServer.csproj
+++ b/demo/host/DemoApp.IdentityServer/DemoApp.IdentityServer.csproj
@@ -1,51 +1,50 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
     <PreserveCompilationReferences>true</PreserveCompilationReferences>
     <UserSecretsId>DemoApp-c2d31439-b723-48e2-b061-5ebd7aeb6010</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
-    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="5.0.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.*">
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Account.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.IdentityServer.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.IdentityServer.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="5.1.3" />
     <ProjectReference Include="..\..\src\DemoApp.Application.Contracts\DemoApp.Application.Contracts.csproj" />
     <ProjectReference Include="..\DemoApp.Host.Shared\DemoApp.Host.Shared.csproj" />
   </ItemGroup>
