--- a/demo/src/DemoApp.Application/DemoApp.Application.csproj
+++ b/demo/src/DemoApp.Application/DemoApp.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Application.Contracts\DemoApp.Application.Contracts.csproj" />
     <ProjectReference Include="..\DemoApp.Domain\DemoApp.Domain.csproj" />
   </ItemGroup>
