--- a/demo/src/DemoApp.Blazor/DemoApp.Blazor.csproj
+++ b/demo/src/DemoApp.Blazor/DemoApp.Blazor.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
     <Import Project="..\..\common.props" />
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Volo.Abp.AutoMapper" Version="4.4.4" />
+        <PackageReference Include="Volo.Abp.AutoMapper" Version="5.1.3" />
     </ItemGroup>
 
     <ItemGroup>
