--- a/demo/src/DemoApp.Domain/DemoApp.Domain.csproj
+++ b/demo/src/DemoApp.Domain/DemoApp.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Ddd.Domain" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Domain.Shared\DemoApp.Domain.Shared.csproj" />
   </ItemGroup>
 
