--- a/demo/src/DemoApp.EntityFrameworkCore/DemoApp.EntityFrameworkCore.csproj
+++ b/demo/src/DemoApp.EntityFrameworkCore/DemoApp.EntityFrameworkCore.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Domain\DemoApp.Domain.csproj" />
   </ItemGroup>
 
