--- a/demo/src/DemoApp.HttpApi.Client/DemoApp.HttpApi.Client.csproj
+++ b/demo/src/DemoApp.HttpApi.Client/DemoApp.HttpApi.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Http.Client" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Http.Client" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Application.Contracts\DemoApp.Application.Contracts.csproj" />
   </ItemGroup>
 
