--- a/demo/src/DemoApp.HttpApi/DemoApp.HttpApi.csproj
+++ b/demo/src/DemoApp.HttpApi/DemoApp.HttpApi.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Application.Contracts\DemoApp.Application.Contracts.csproj" />
   </ItemGroup>
 
