--- a/demo/src/DemoApp.MongoDB/DemoApp.MongoDB.csproj
+++ b/demo/src/DemoApp.MongoDB/DemoApp.MongoDB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.MongoDB" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.MongoDB" Version="5.1.3" />
     <ProjectReference Include="..\DemoApp.Domain\DemoApp.Domain.csproj" />
   </ItemGroup>
 
