--- a/demo/test/DemoApp.Domain.Tests/DemoApp.Domain.Tests.csproj
+++ b/demo/test/DemoApp.Domain.Tests/DemoApp.Domain.Tests.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <ProjectReference Include="..\DemoApp.EntityFrameworkCore.Tests\DemoApp.EntityFrameworkCore.Tests.csproj" />
   </ItemGroup>
 
