--- a/demo/test/DemoApp.EntityFrameworkCore.Tests/DemoApp.EntityFrameworkCore.Tests.csproj
+++ b/demo/test/DemoApp.EntityFrameworkCore.Tests/DemoApp.EntityFrameworkCore.Tests.csproj
@@ -1,18 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.*" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.*" />
     <ProjectReference Include="..\..\src\DemoApp.EntityFrameworkCore\DemoApp.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\DemoApp.TestBase\DemoApp.TestBase.csproj" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="5.1.3" />
   </ItemGroup>
 
 </Project>
