--- a/demo/test/DemoApp.MongoDB.Tests/DemoApp.MongoDB.Tests.csproj
+++ b/demo/test/DemoApp.MongoDB.Tests/DemoApp.MongoDB.Tests.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="Mongo2Go" Version="3.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Mongo2Go" Version="3.1.3" />
     <ProjectReference Include="..\..\src\DemoApp.MongoDB\DemoApp.MongoDB.csproj" />
     <ProjectReference Include="..\DemoApp.TestBase\DemoApp.TestBase.csproj" />
   </ItemGroup>
