--- a/demo/test/DemoApp.TestBase/DemoApp.TestBase.csproj
+++ b/demo/test/DemoApp.TestBase/DemoApp.TestBase.csproj
@@ -1,22 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>DemoApp</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
-    <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="NSubstitute" Version="4.3.0" />
     <PackageReference Include="Shouldly" Version="4.0.3" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.Authorization" Version="4.4.4" />
-    <PackageReference Include="Volo.Abp.TestBase" Version="4.4.4" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.Authorization" Version="5.1.3" />
+    <PackageReference Include="Volo.Abp.TestBase" Version="5.1.3" />
     <ProjectReference Include="..\..\src\DemoApp.Domain\DemoApp.Domain.csproj" />
   </ItemGroup>
 
