--- a/src/Tchivs.Abp.AspNetCore.Blazor.Theme.WebAssembly/Tchivs.Abp.AspNetCore.Blazor.Theme.WebAssembly.csproj
+++ b/src/Tchivs.Abp.AspNetCore.Blazor.Theme.WebAssembly/Tchivs.Abp.AspNetCore.Blazor.Theme.WebAssembly.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	<Import Project="..\..\common.props" />
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net5.0</TargetFrameworks>
+		
 		<IsPackable>true</IsPackable>
 		<Nullable>enable</Nullable>
 		<OutputType>Library</OutputType>
@@ -10,7 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="Volo.Abp.Http.Client.IdentityModel.WebAssembly" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly" Version="$(AbpVersion)" />
-		<PackageReference Include="Volo.Abp.AutoMapper" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="5.1.3" />
 		
 	</ItemGroup>
 	<ItemGroup>
