--- a/src/Tchivs.Abp.Shared/Tchivs.Abp.Shared.csproj
+++ b/src/Tchivs.Abp.Shared/Tchivs.Abp.Shared.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<Import Project="..\..\common.props" />
 	<PropertyGroup>
@@ -14,7 +14,7 @@
 		<PackageReference Include="Volo.Abp.Validation" Version="$(AbpVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="5.0.*" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.*" />
 	</ItemGroup>
 
 	<ItemGroup>
