--- a/common.props
+++ b/common.props
@@ -10,8 +10,8 @@
   </Target>
 
   <ItemGroup>
-    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.1" PrivateAssets="All" />
-    <PackageReference Include="Fody" Version="6.6.0">
+    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.*" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="6.6.*">
       <PrivateAssets>All</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
