update blazor wasm tempates

--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/appsettings.json
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/appsettings.json
@@ -2,7 +2,7 @@
   "App": {
     "SelfUrl": "https://localhost:44300",
     "ClientUrl": "http://localhost:4200",
-    "CorsOrigins": "https://*.MyProjectName.com,http://localhost:4200",
+    "CorsOrigins": "https://*.MyProjectName.com,http://localhost:4200,https://localhost:44307",
     "RedirectAllowedUrls": "http://localhost:4200"
   },
   "ConnectionStrings": {
@@ -22,6 +22,10 @@
       "MyProjectName_App": {
         "ClientId": "MyProjectName_App",
         "RootUrl": "http://localhost:4200"
+      },
+      "MyProjectName_Blazor": {
+        "ClientId": "MyProjectName_Blazor",
+        "RootUrl": "https://localhost:44307"
       },
       "MyProjectName_Blazor_Server": {
         "ClientId": "MyProjectName_Blazor_Server",
