--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/MyCompanyName.MyProjectName.Host.csproj
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/MyCompanyName.MyProjectName.Host.csproj
@@ -12,81 +12,81 @@
 		<PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Autofac" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Swashbuckle" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Autofac" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Swashbuckle" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.Account.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Account.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Account.Web" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.Account.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Account.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Account.Web" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.Web" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.OpenIddict.EntityFrameworkCore" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Identity.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Identity.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Identity.Web" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.Identity.EntityFrameworkCore" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.OpenIddict.EntityFrameworkCore" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.PermissionManagement.Web" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Domain.OpenIddict" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.PermissionManagement.Web" Version="$(AbpVersion)" />
 
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.TenantManagement.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.TenantManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.TenantManagement.Web" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.FeatureManagement.Web" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.SettingManagement.Application" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Application" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.SettingManagement.EntityFrameworkCore" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.SettingManagement.Web" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.AuditLogging.EntityFrameworkCore" Version="$(AbpVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<!-- <TEMPLATE-REMOVE> -->
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="6.0.0" />
-		<PackageReference Include="Volo.Abp.AutoMapper" Version="6.0.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="$(AbpVersion)" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="$(AbpVersion)" />
 		<!-- </TEMPLATE-REMOVE> -->
 		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.LeptonXLite" Version="1.0.0-rc.*" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.9" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="$(MicrosoftPackageVersion)" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.9">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="$(MicrosoftPackageVersion)">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 			<PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
 		</PackageReference>
