--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -11,11 +11,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v3
-      id: cp310
+      id: cp0
       with:
         dotnet-version: '6.0.x'
         include-prerelease: true
-    - run: echo '${{ steps.cp310.outputs.dotnet-version }}'
+    - name: Show Dotnet Version
+      run: echo '${{ steps.cp0.outputs.dotnet-version }}'
     - name: Build with dotnet
       run: dotnet build --configuration Release
      
